page number range error fix

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <span class="title">Pages</span>
               <span class="error" aria-live="polite"></span>
             </label>
-            <input type="number" id="pages" name="pages" required />
+            <input type="number" id="pages" name="pages" min="1" required />
           </div>
           <div class="select-status">
             <label for="status" class="status">Status</label>
